Document PPDG/src/objects/Qualtrics_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Qualtrics_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Taken__c</fullName>
        <label>Date Survey Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>Prospect_Customer_Name__r.EBS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <formula>VALUE( Response_5__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Easy__c</fullName>
        <formula>VALUE( Response_12__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Easy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect/Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualtrics_Surveys</relationshipLabel>
        <relationshipName>Qualtrics_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <label>Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1e__c</fullName>
        <label>Question 1e</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1f__c</fullName>
        <label>Question 1f</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1g__c</fullName>
        <label>Question 1g</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1h__c</fullName>
        <label>Question 1h</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_1i__c</fullName>
        <label>Question 1i</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2b__c</fullName>
        <label>Question 2b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2c__c</fullName>
        <label>Question 2c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2d__c</fullName>
        <label>Question 2d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2e__c</fullName>
        <label>Question 2e</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2f__c</fullName>
        <label>Question 2f</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2g__c</fullName>
        <label>Question 2g</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_3_a__c</fullName>
        <label>Question 1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3b__c</fullName>
        <label>Question 1b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3c__c</fullName>
        <label>Question 1c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3d__c</fullName>
        <label>Question 1d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_4__c</fullName>
        <label>Question 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_4a__c</fullName>
        <label>Question 4a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5a__c</fullName>
        <label>Question 5a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5b__c</fullName>
        <label>Question 5b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5c__c</fullName>
        <label>Question 5c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_5d__c</fullName>
        <label>Question 5d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_12__c</fullName>
        <label>Response 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_1e__c</fullName>
        <label>Response 1e</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_1f__c</fullName>
        <label>Response 1f</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_1g__c</fullName>
        <label>Response 1g</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_1h__c</fullName>
        <label>Response 1h</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_1i__c</fullName>
        <label>Response 1i</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2b__c</fullName>
        <label>Response 2b</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2c__c</fullName>
        <label>Response 2c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2d__c</fullName>
        <label>Response 2d</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2e__c</fullName>
        <label>Response 2e</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2f__c</fullName>
        <label>Response 2f</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_2g__c</fullName>
        <label>Response 2g</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_3a__c</fullName>
        <label>Response 1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_3b__c</fullName>
        <label>Response 1b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_3c__c</fullName>
        <label>Response 1c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_3d__c</fullName>
        <label>Response 1d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_4__c</fullName>
        <label>Response 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_4a__c</fullName>
        <label>Response 4a</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_5__c</fullName>
        <label>Response 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_5a__c</fullName>
        <label>Response 5a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_5b__c</fullName>
        <label>Response 5b</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_5c__c</fullName>
        <label>Response 5c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_5d__c</fullName>
        <label>Response 5d</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Location__c</fullName>
        <formula>TEXT( Agent__r.Location_of_Lead_Provider__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Member Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Taken__c</fullName>
        <formula>if (

 Date_Survey_Taken__c  &gt;  (TODAY()  - 90), True, False

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Taken</label>
        <type>Checkbox</type>
    </fields>
    <label>Qualtrics Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date_Survey_Taken__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Agent__c</columns>
        <columns>Name__c</columns>
        <columns>EBS_ID__c</columns>
        <columns>Prospect_Customer_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Qualtrics Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualtrics_Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>